# fgl_cmake_modules

./: .gitignore  CMakeLists.txt
fgl_cmake_modules/compiler/: clang.cmake  gcc.cmake
modules/: common.cmake  helpers.cmake
modules/compiler/: clang.cmake  features.cmake  flags.cmake  gcc.cmake  msvc.cmake
modules/features/: c++26.cmake  reflection.cmake  reflection.cpp
modules/git/: commit.cmake  tag.cmake
modules/os/: win32.cmake
